--- a/SaveMom.Domain/SaveMom.Domain.csproj
+++ b/SaveMom.Domain/SaveMom.Domain.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
     <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SaveMom.Contracts\SaveMom.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
