--- a/SaveMom.Contracts/SaveMom.Contracts.csproj
+++ b/SaveMom.Contracts/SaveMom.Contracts.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
 </Project>
