--- a/.github/workflows/development_savemomapi-dev.yml
+++ b/.github/workflows/development_savemomapi-dev.yml
@@ -15,6 +15,25 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Delete Old Artifacts
+        uses: actions/github-script@v6
+        id: artifact
+        with:
+          script: |
+            const res = await github.rest.actions.listArtifactsForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+            })
+
+            res.data.artifacts
+              .forEach(({ id }) => {
+                github.rest.actions.deleteArtifact({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  artifact_id: id,
+                })
+              })
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
